--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 html{
-    color-scheme: light dark;
+    background-color: #626D58;
+    color: white;
     line-height: 1.5;
 }
 h1{
@@ -19,7 +20,7 @@ p{
 }
 .weatherContainer{
     margin: 5%;
-    border: 2px solid black;
+    border: 2px solid white;
 }
 #weatherAlerts{
     font-weight: bold;
@@ -33,9 +34,10 @@ p{
     width: auto;
 }
 .temperature{
-    font-size: 50px;
-}
-#icon{
-    width: 50vh;
+    display: flex;
+    align-items: center;
+    flex-direction:inherit;
+    justify-content: center;
+    font-size: 3rem;
 }
   
