Added support for multiple weather alerts Fixed "There is a null% of rain" replaced with "There is a 0% chance of rain"

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,8 @@ p{
 #weatherAlerts{
     font-weight: bold;
     font-size: 25px;
+    text-align: center;
+    margin: 2%;
 }
 .iconContainer{
     display:flex;
