--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 html{
+    margin: 0px;
     background-color: #626D58;
-    color: white;
     line-height: 1.5;
+    font-family: 'Roboto', sans-serif;
 }
 h1{
+    font-weight: bolder;
     text-align: center;
 }
 .getLocation{
@@ -19,27 +22,66 @@ p{
     text-align: center;
 }
 .weatherContainer{
+    background-color: white;
+    color: black;
     margin: 5%;
     border: 2px solid white;
 }
 #weatherAlerts{
-    font-weight: bold;
-    font-size: 25px;
     text-align: center;
     margin: 2%;
 }
-.iconContainer{
-    display:flex;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-    width: auto;
-}
-.temperature{
+.temperature {
+    line-height: 0;
     display: flex;
     align-items: center;
-    flex-direction:inherit;
     justify-content: center;
     font-size: 3rem;
+  }
+  .temperatureDIv{
+    margin: 0;
+    font-size: 2.5rem;
+    padding-right: 50px;
+  }
+  .shortForecast {
+    text-align: center;
+    font-size: 15px;
+  }
+  #temperature {
+    font-weight: bold;
+  }
+.windRainContainer{
+    line-height: 0;
 }
-  
+.windDIv{
+    font-size: 15px;;
+}
+.rainChanceDiv{
+    font-size: 15px;
+}
+.windRainContainer{
+    font-size: 30px;
+}
+@media screen and (max-width: 400px) {
+    .temperature {
+        display: block;
+    }
+    .iconDiv{
+        margin: 0;
+        text-align: center;
+    }
+    .temperatureDIv{
+    margin: 0;
+      text-align: center;
+    padding: 0;
+      }
+    #temperature{
+        font-size: 1.5rem;
+        text-align: center;
+        
+    }
+      .shortForecast {
+        font-size: 1rem;
+        text-align: center;
+      }
+  }
