Added ability to switch from default weather forecast to hourly forecast

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@ html{
     line-height: 1.5;
     font-family: 'Roboto', sans-serif;
 }
+.hidden{
+    display: none;
+}
 .centered{
     text-align: center;
 }
