--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,12 @@ html{
 .hidden{
     display: none;
 }
+img{
+    width: 5vw;
+}
+.iconDiv{
+    padding-right: 1%;
+}
 .centered{
     text-align: center;
 }
