--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,26 @@ html{
     line-height: 1;
     font-family: 'Roboto', sans-serif;
 }
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+    text-align: center;
+  }
+.weatherSettings{
+
+}
+.weatherSettings h1{
+
+}
 .hidden{
     display: none;
 }
