--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,11 @@ main{
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0,0,0,0.5);
+    background: black;
     z-index: 2;
     cursor: pointer;
     text-align: center;
-    color: black;
+    color: white;
   } 
 .weatherSettings{
 
