--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,9 @@ img{
     font-size: 1rem;
   }
   #feelsLike{
-    font-weight: normal;
-    font-size: 1rem;
+  }
+  .inline {
+    display: inline;
   }
   .temperatureDiv {
     margin-left: 15px;
@@ -82,6 +83,9 @@ img{
     width: 30px; /* Adjust as needed */
     height: 30px; /* Adjust as needed */
   }
+  .col-sm{
+    border: 2px solid black;
+  }
 @media screen and (max-width: 550px) {
     .weatherContainer{
         margin: 0%;
@@ -89,7 +93,7 @@ img{
         font-weight: normal;
     }
     #temperature{
-        font-size: 1.25rem;
+        font-size: 2rem;
         font-weight: bold;
     }
     img{
@@ -103,10 +107,6 @@ img{
        width:15vw;
     }
     .temperatureDIv{
-        line-height:1.4;
-        font-weight: normal;
-    padding:0;
-    font-size: .75rem;
       }
     .windRainContainer{
         line-height: .5;
