--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,18 @@ img{
   .col-sm{
     border: 2px solid black;
   }
+  #getForecasts{
+    background-color: #F39C12;
+    border: 2px solid #F39C12;
+    color: black;
+  }
+  #getForecasts:hover{
+    border: 2px solid black;
+  }
+  .hourlyForecastsContainer{
+    line-height: 1;
+  }
+  
 @media screen and (max-width: 550px) {
     .weatherContainer{
         margin: 0%;
